# SmartAppUpdates

./: README.md
ApkPatchLibrary/: settings.gradle
ApkPatchLibrary/app/: build.gradle
ApkPatchLibrary/app/src/androidTest/java/com/cundong/apkpatch/: ExampleInstrumentedTest.java
ApkPatchLibrary/app/src/main/: AndroidManifest.xml
ApkPatchLibrary/app/src/main/cpp/: CMakeLists.txt
ApkPatchLibrary/app/src/main/cpp/androidPatchLibrary/: com_cundong_utils_PatchUtils.c
ApkPatchLibrary/app/src/main/java/com/cundong/apkpatch/: MainActivity.java
ApkPatchLibrary/app/src/main/res/values/: strings.xml  themes.xml
ApkPatchLibrary/app/src/main/res/values-night/: themes.xml
ApkPatchLibrary/app/src/test/java/com/cundong/apkpatch/: ExampleUnitTest.java
ApkPatchLibrary/gradle/wrapper/: gradle-wrapper.properties
ApkPatchLibraryServer/: .cproject  start_class_diff.sh  start_class_patch.sh
ApkPatchLibraryServer/jni/: CMakeLists.txt
ApkPatchLibraryServer/src/com/cundong/apkdiff/: ApkDiffDemo.java
ApkPatchLibraryServer/src/com/cundong/apkpatch/: ApkPatchDemo.java
ApkPatchLibraryServer/src/com/cundong/common/: Constants.java
